# skylos-demo

./: .gitignore  CHANGELOG.md  README.md  benchmark.py  benchmark_click.py  benchmark_consola.py  benchmark_fastapi.py  benchmark_flask.py  benchmark_go_chi.py  benchmark_httpx.py  benchmark_hybrid.py  benchmark_pydantic.py  benchmark_requests.py  benchmark_rich.py  benchmark_starlette.py  benchmark_tqdm.py  benchmark_ts.py  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/api/: deps.py  handlers.py
app/api/routers/: __init__.py  health.py  notes.py  reports.py
app/core/: auth.py  base.py  cache.py  decorators.py  errors.py  events.py  exceptions.py  feature_flags.py  middleware.py  pagination.py  plugins.py  registry.py
app/db/: crud.py  models.py  session.py
app/integrations/: __init__.py  bootstrap.py  github.py  http_client.py  metrics.py  slack.py  webhook_signing.py
app/integrations/routers/: webhooks.py
app/schemas/: notes.py
app/services/: audit_service.py  export_service.py  notes_services.py  notification_service.py  payment_services.py  report_service.py  tasks.py
app/utils/: formatters.py  ids.py
tests/: conftest.py  factories.py  helpers.py  test_notes.py
web/: package.json  tsconfig.json
web/src/: config.ts  index.ts  logging.ts
web/src/core/: errors.ts  registry.ts
web/src/db/: crud.ts  models.ts  session.ts
web/src/handlers/: index.ts
web/src/integrations/: bootstrap.ts  github.ts  httpClient.ts  index.ts  metrics.ts  slack.ts  webhookSigning.ts
web/src/middleware/: auth.ts
web/src/routes/: health.ts  index.ts  notes.ts  reports.ts
web/src/schemas/: notes.ts
(+9 files in other folders)
