[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skylos-demo"
version = "0.1.1"
description = "Demo repo for Skylos vs Vulture benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache 2.0"
authors = [{ name = "Skylos" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "requests>=2.31",
  "skylos"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "vulture>=2.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.skylos]
no_upload_prompt = true
